# mcp-validator-server

./: .gitignore  DJANGO_INTEGRATION.md  README.md  USAGE.md  pyproject.toml  requirements-api.txt  requirements.txt  run_rest_api.sh  run_sse_server.sh  test_rest_api.sh
.github/: copilot-instructions.md
clients/: django_client.py
docs/: MASTER-PLAN.md  STEP-1-PROJECT-SETUP.md  STEP-2-EMAIL-VALIDATOR.md  STEP-3-PHONE-VALIDATOR.md  STEP-4-URL-VALIDATOR.md  STEP-5-REGEX-VALIDATOR.md  STEP-6-TESTING-DOCS.md
src/mcp_validation_server/: __init__.py  __main__.py  api.py  http_server.py  rest_api.py  server.py
src/mcp_validation_server/validators/: __init__.py  custom_regex.py  email.py  phone.py  url.py
