[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-validation-server"
version = "0.1.0"
description = "MCP server for input validation (email, phone, URL, regex)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
]
